--- a/html/css/style.css
+++ b/html/css/style.css
@@ -9,9 +9,6 @@ body {
 }
 
 @media (min-width: 600px) {
-  body {
-    width: 100%;
-  }
   a {
     text-decoration: none;
     padding-bottom: 1px;
@@ -200,6 +197,13 @@ body {
   }
   footer {
     display: none;
+  }
+  #linkabout {
+    position: relative;
+    top: 200px;
+  }
+  #linkschedule {
+    top: 150px;
   }
 }
 
@@ -453,7 +457,7 @@ h2 {
   color: #000;
   text-align: center;
   margin: 0;
-  padding-top: 2%;
+  padding-top: 0%;
   padding-bottom: 2%;
 }
 
@@ -487,6 +491,7 @@ h2 {
 #about h2 {
   color: #000;
   margin: 0;
+  padding-top: 2%;
   text-align: center;
 }
 
@@ -495,9 +500,13 @@ h2 {
   padding: 0;
 }
 
+#about li {
+  margin-right: 0;
+}
+
 #profile {
   margin-top: 0;
-  padding-left: 5%;
+  padding-left: 7%;
   display: flex;
   justify-content: space-between;
 }
@@ -557,9 +566,9 @@ h2 {
 
 .djs-text {
   padding-top: 1%;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-bottom: 5%;
+  padding-left: 7%;
+  padding-right: 7%;
+  padding-bottom: 7%;
 }
 
 .profile_japanese {
@@ -578,6 +587,12 @@ h2 {
 #linkschedule {
   position: relative;
   top: -50px;
+}
+
+@media only screen and (max-width: 599px) {
+  #linkschedule {
+    top: 150px;
+  }
 }
 
 .area02 {
@@ -609,6 +624,10 @@ h2 {
   margin-top: 0;
   padding: 2% 0 0;
   text-align: center;
+}
+
+#schedule li {
+  margin-right: 0;
 }
 
 /* ここからbxslider*/
@@ -711,6 +730,12 @@ table td {
   top: -47px;
 }
 
+@media only screen and (max-width: 599px) {
+  #linknews {
+    top: 153px;
+  }
+}
+
 .area03 {
   background-color: #fff;
   width: 100%;
@@ -798,6 +823,12 @@ table td {
   top: -40px;
 }
 
+@media only screen and (max-width: 599px) {
+  #linkmusic {
+    top: 153px;
+  }
+}
+
 .area04 {
   width: 100%;
   height: auto;
@@ -867,6 +898,12 @@ iframe:hover {
   top: -45px;
 }
 
+@media only screen and (max-width: 599px) {
+  #linkcontact {
+    top: 30px;
+  }
+}
+
 .area05 {
   background-color: #fff;
   width: 100%;
@@ -884,6 +921,10 @@ iframe:hover {
   background-size: cover;
   z-index: 3;
   padding-bottom: 0%;
+}
+
+#contact p {
+  font-family: 'Duru Sans', sans-serif;
 }
 
 #contact h2 {
@@ -932,7 +973,8 @@ input[type="email"] {
 
 #contact textarea {
   color: #fff;
-  font-size: 1.2em;
+  font-size: 1.1em;
+  font-family: 'Duru Sans', sans-serif;
   border: 2px solid #666;
 }
 
