--- a/_resource/sass/style.scss
+++ b/_resource/sass/style.scss
@@ -9,42 +9,6 @@ body {
     width: 100%;
 }
 
-@media (min-width: 600px)  {
-
-a {
-    text-decoration:none;
-    padding-bottom:1px;
-}
-header .nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    margin-left:0;
-    z-index: 999;
-    font-family: 'Duru Sans', sans-serif;
-    font-size: 12px;
-    text-align: center;
-    background-color: #fff;
-    width: 100%;
-    ul {
-        padding-left: 0;
-        li {
-            list-style-type: none;
-            display: inline-block;
-            margin: 5px 2.94%;
-            a {
-                text-decoration: none;
-                color: #000;
-                &:hover {
-                    text-decoration: none;
-                    color: #bbb;
-                }
-            }
-        }
-    }
-}
-}
-
 @media only screen and (max-width: 599px) {
 html, body,ul,li,a,nav {
     margin: 0;
@@ -64,7 +28,7 @@ a {
         color: rgba(255, 255, 255, 1);
         font-size: 3.5em;
         margin-top: 80%;
-        background-color: rgba(0, 0, 90, .3);
+        // background-color: rgba(0, 0, 90, .3);
     }
     .scroll {
         display: none;
@@ -263,7 +227,7 @@ top:150px;
     margin-left: 10px;
 }
         li {
-            display: inline-block;
+            // display: inline-block;
             margin-right: 10px;
             a {
                 color: #777;
@@ -315,6 +279,43 @@ top:150px;
     }
 }
 
+@media (min-width: 600px)  {
+
+a {
+    text-decoration:none;
+    padding-bottom:1px;
+}
+header .nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin-left:0;
+    z-index: 999;
+    font-family: 'Duru Sans', sans-serif;
+    font-size: 12px;
+    text-align: center;
+    background-color: #fff;
+    width: 100%;
+    ul {
+        padding-left: 0;
+        li {
+            list-style-type: none;
+            display: inline-block;
+            margin: 5px 2.94%;
+            a {
+                text-decoration: none;
+                color: #000;
+                &:hover {
+                    text-decoration: none;
+                    color: #bbb;
+                }
+            }
+        }
+    }
+}
+}
+
+
 #top {
     position: fixed;
     top: 0px;
@@ -341,7 +342,7 @@ h1 {
     position: scroll;
     width: 100%;
     text-align: center;
-    background-color: rgba(0, 0, 90, .3);
+    // background-color: rgba(0, 0, 90, .3);
 }
 
 h2 {
@@ -475,6 +476,7 @@ h2 {
     text-align: center;
     margin: 0;
     padding-top: 0%;
+    // padding-right:2%;これやると、ベースずれる！！！
     padding-bottom: 2%;
 }
 
