--- a/_resource/sass/style.scss
+++ b/_resource/sass/style.scss
@@ -28,7 +28,7 @@ a {
         color: rgba(255, 255, 255, 1);
         font-size: 3.5em;
         margin-top: 70%;
-        background-color: rgba(0, 0, 90, .3);
+        // background-color: rgba(0, 0, 90, .3);
     }
     .scroll {
         display: none;
@@ -83,9 +83,6 @@ a {
             margin-top:0;
             margin-bottom:0;
         }
-        // li .tables {
-        //     margin: 0 auto;
-        // }
         table {
             padding: 0 0;
             font-size: 0.75em;
@@ -224,7 +221,6 @@ top:150px;
     position: inherit;//position指定しないと階層構造が狂うので指定
     background:#fff;
     height:40px;
-    // border-bottom:1px solid #ccc;
     padding-top:10px;
     }
 
@@ -234,13 +230,11 @@ top:150px;
     margin-left: 10px;
 }
         li {
-            // display: inline-block;
             margin-right: 10px;
             a {
                 color: #777;
                 &:hover {
                     color: #bbb;
-                        // border-bottom:1px solid #777;
                 }
             }
         }
@@ -343,13 +337,13 @@ h1 {
     display: block;
     font-family: 'Megrim', cursive;
     color: rgba(255, 255, 255, 1);
-    font-size: 6.1em;
-    margin-top: 24%;
+    font-size: 6.5em;
+    margin-top: 23%;
     margin-bottom: 0;
     position: scroll;
     width: 100%;
     text-align: center;
-    background-color: rgba(0, 0, 90, .3);
+    // background-color: rgba(0, 0, 90, .3);
 }
 
 h2 {
@@ -515,6 +509,7 @@ h2 {
     bottom: 0%;
 }
 
+
 @media only screen and (max-width: 599px) {
     #about .bx-controls-direction{
         display: none;
@@ -571,7 +566,7 @@ h2 {
             margin-top: 1%;
             text-align: center;
             &:hover {
-                border: #000 solid 1px;
+                border: #666 solid 1px;
             }
             img {
                 background-size: cover;
@@ -586,7 +581,7 @@ h2 {
 .profile_right .twitter-header,
 .profile_right .mixcloud-header,
 .profile_right .instagram-header {
-    border: #666 solid 1px;
+    border: #000 solid 1px;
     border-radius: 3px;
 }
 
