発表後　ニュースのリンク文字ちぢめた

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -328,7 +328,7 @@ h1 {
 
 h2 {
   font-family: 'Duru Sans', sans-serif;
-  color: #ffffff;
+  color: #fff;
   margin-bottom: 0px;
   font-size: 2em;
 }
