--- a/_resource/sass/style.scss
+++ b/_resource/sass/style.scss
@@ -348,7 +348,7 @@ h1 {
 
 h2 {
     font-family: 'Duru Sans', sans-serif;
-    color: #ffffff;
+    color: #fff;
     margin-bottom: 0px;
     font-size: 2em;
 }
